# analysis

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  00_analysis.html  00_analysis.ipynb  01_posessions.html  01_posessions.ipynb  01_possessions.ipynb  01_possessions.py  02_fouling.html  02_fouling.ipynb  03_mercury.ipynb  04_player_stats.ipynb  0_test.py  FIBA_3x3_WS_Tour_Stats_After_008_Events.xlsx  README.md  celery.sqlite  demo.ipynb  pyproject.toml  requirements.txt  utils.py
Pro/2019/: FIBA_3x3_Pro_Circuit_Stats_2019_update04-12-2020.xlsx
Pro/2021/: FIBA_3x3_Pro_Circuit_Stats_After_014_Events.xlsx
Pro/2022/: FIBA_3x3_Pro_Circuit_Stats_After_016_Events.xlsx  FIBA_3x3_Pro_Circuit_Stats_After_028_Events.xlsx
WS/WS19/: FIBA3x3_Womens_Series_2019_Team_and_Player_Stats_Season_2019.xlsx
WS/WS21/: FIBA_3x3_WS_Tour_Stats.xlsx
WS/WS22/: FIBA_3x3_WS_Tour_Stats_After_008_Events.xlsm  FIBA_3x3_WS_Tour_Stats_After_010_Events.xlsx
WT/: FIBA3x3_WT2015-2020_statistics.xlsx
