[tool.poetry]
name = "analysis"
version = "0.1.0"
description = "analysis of 3x3"
authors = ["xgao32 <xgao32@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pandas = "^1.4.3"
scipy = "^1.9.0"
plotnine = "^0.9.0"
seaborn = "^0.11.2"
plotly = "^5.10.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.5"
statsmodels = "^0.13.2"
numpy = "^1.23.2"
openpyxl = "^3.0.10"
mljar-mercury = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
